fix: layout shift on radix dropdown

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,6 +75,10 @@
     overflow-y: auto;
     scrollbar-gutter: stable;
   }
+  .no-margin-body[data-scroll-locked] {
+    --removed-body-scroll-bar-size: 0 !important;
+    margin-right: 0 !important;
+  }
 }
 
 html {
